--- a/src/EmployeeList/server/Views/Root/Index.cshtml
+++ b/src/EmployeeList/server/Views/Root/Index.cshtml
@@ -1,5 +1,5 @@
 @section Scripts{
-    <script src="~/dist/app.js"></script>
+    <script src="~/client/app.js"></script>
 }
 
 <div id="app">Loading...</div>
