Ordered depedencies and delcared jQuery

--- a/src/EmployeeList/ngcleint/src/app/employee/employee-update/employee-update.component.html
+++ b/src/EmployeeList/ngcleint/src/app/employee/employee-update/employee-update.component.html
@@ -1,1 +1,17 @@
-<p>employee-update works!</p>
+
+
+
+<app-success-modal
+  [modalHeaderText]="'Success message'"
+  [modalBodyText]="'Action completed successfully'"
+  [okButtonText]="'OK'"
+  (redirectOnOK)="redirectToEmployeeList()"
+>
+</app-success-modal>
+
+<app-error-modal
+  [modalHeaderText]="'Error message'"
+  [modalBodyText]="errorMessage"
+  [okButtonText]="'OK'"
+>
+</app-error-modal>
