Filled in Update component methods and style

--- a/src/EmployeeList/ngcleint/src/app/employee/employee-create/employee-create.component.html
+++ b/src/EmployeeList/ngcleint/src/app/employee/employee-create/employee-create.component.html
@@ -72,9 +72,7 @@
             class="form-control" 
           />
         </div>
-        <!-- appDatepicker
-            (dateChange)="executeDatePicker($event)"
-            readonly -->
+
         <div class="col-md-5">
           <em
             *ngIf="
@@ -91,7 +89,7 @@
           class="btn btn-primary"
           [disabled]="!employeeForm.valid"
         >
-          Save
+          Add Employee
         </button>
 
         <button
